2005-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/ly-rules.make ($(outdir)/%.nexi): Remove old makeinfo
	compatibility.

	* Documentation/user/GNUmakefile: Remove splitting-makeinfo.

2005-03-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/page-breaks.ly: Fix and update.

2005-03-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/texinfo-vars.make: DESTDIR fixes (Matthias
	Kilian).

2005-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/help2man-targets.make:
	* mf/GNUmakefile:
	* tex/GNUmakefile: DESTDIR fixes (Matthias Kilian).

2005-03-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* tex/GNUmakefile (latin1.enc): Fix for newer gs generating output
	on stderr.

2005-03-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (MAKEINFO): Require 4.7 (ZbynÄk Burget).

2005-03-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.4.5

	* input/regression/tie-arpeggio.ly: new file. Backport.

2005-02-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
  
	* scm/define-context-properties.scm
	(all-user-translation-properties): add tieWaitForNote
 
	* scm/define-grobs.scm (all-grob-descriptions): add
	Tie_column::before_line_breaking
 
	* lily/tie.cc (get_column_rank): new function

	* lily/tie-column.cc (before_line_breaking): new function.
	(werner_directions): take into account ties that start on
	different columns.  

	* lily/score-engraver.cc (set_columns): move add_column() so we
	have column rank available.

	* lily/tie.cc (get_column_rank): new function.
	
2005-02-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	Remove dashed.

	* lily/lily-guile.cc: Compile fix for platforms without libintl.
	Now it compiles too.

2005-02-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Slur-dash patch by Bertalan.

2005-02-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: teTeX-3.0 inimf fix.  Comment-out.

2005-02-09  Jan Nieuwenhuizen  <janneke@gnu.org>
