@@ -1,3 +1,8 @@
+2005-03-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/new-fingering-engraver.cc (position_scripts): take priority
+	from head position. Backport.
+
 2005-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* make/ly-rules.make ($(outdir)/%.nexi): Remove old makeinfo
